# phaml

./: spkg-install
phaml/: CMakeLists.txt  __init__.py  compile  example1.f90  example2.f90  example_eigen.f90  iso_c_utilities.f90  pde.f90  plot.py  simple.f90  simple.pxd  simple_wrapper.c  simple_wrapper.pyx
src/: CMakeLists.txt  Makefile  README  mkmkfile.sh
src/cmake/: FindARPACK.cmake  FindPython.cmake
src/doc/: AUXILLARY  HINTS  HISTORY  KNOWN_PROBLEMS  LICENSE  QUICKSTART  UPGRADING
src/examples/L-domain/: L.1.edge  L.1.ele  L.1.neigh  L.1.node  L.node  README.Ldomain  master.f90  pde.f90  spmd.f90
src/examples/all/: README.all  master.f90  mkmkfile.sh  pde.f90  spmd.f90  usermod.f90
src/examples/curved/: README.curved  master.f90  mkmkfile.sh  pde.f90  spmd.f90
src/examples/domains/: README.domains  master.f90  mesh01.poly  mesh02.poly  mesh03.poly  mesh04.poly  mesh05.poly  mesh06.poly  mesh07.poly  mesh08.poly  mesh09.poly  nist.poly  nistext.poly  pde.f90  spmd.f90  superior.1.edge  superior.1.ele  superior.1.neigh  superior.1.poly  superior.poly
src/examples/eigenvalue/: README.eigenvalue  domain.node  master.f90  mkmkfile.sh  pde.f90  spmd.f90  usermod.f90
src/examples/elliptic/: CMakeLists.txt  README.elliptic  master.f90  pde.f90  spmd.f90  usermod.f90
src/examples/nonlinear/: README.nonlinear  master.f90  pde.f90  spmd.f90
src/examples/parabolic/: README.parabolic  master.f90  mkmkfile.sh  pde.f90  spmd.f90  usermod.f90
src/examples/periodic/: README.periodic  master.f90  mkmkfile.sh  pde.f90  period.1.edge  period.poly  spmd.f90
src/examples/rectangle/: README.rectangle  master.f90  mkmkfile.sh  pde.f90  spmd.f90
src/examples/runtimepde/: README.runtimepde  master.f90  mkmkfile.sh  pde.f90
src/examples/simple/: README.simple  compile  master.f90  mkmkfile.sh  pde.f90  simple.f90  spmd-xterm.csh  spmd.f90  square.poly  t.py
src/examples/system/: README.system  master.f90  mkmkfile.sh  pde.f90  spmd.f90
src/examples/system_ss/: README.system_ss  master.f90  mkmkfile.sh  pde.f90
src/phaml/: CMakeLists.txt  README.rst  __init__.py  compile  example_eigen.f90  pde_pointers.f90  plot.py  simple.f90  simple_wrapper.c  simple_wrapper.pyx
src/src/: CMakeLists.txt  arpack.dum.f  basis.f90  blas.f  blopex_c.dum.f90  blopex_c.petsc.c  calgo582.f  cpusec.aix.f90  cpusec.c1.c  cpusec.etime.f  cpusec.nil.f  cpusec_f95.f90  dbinom.f  eigen.f90  errest.f90  evaluate.f90  global.f90  graphics.dum.f90  graphics.f90  graphmain.f90  grid.f90  grid_init.f90  grid_io.f90  grid_util.f90  gridtype.f90  hash1.f90  hash2.f90  hash2.f90.nopgibug  hashext1.f90  hashext2.f90  hbmg.f90  hp_strategies.f90  hypre_fix.c  hypre_interf.dum.f90  hypre_interf.f90  hypretype.dum.f90  hypretype.f90  krylov.f90  lapack.f  lapack_solve.f90  (+57 more)
src/testdir/: PBStest.lam  PBStest.mpich2  PBStest.openmpi  mkmkfile.sh  run_tests.sh
src/testdir/debug/: mkmkfile.sh  run_tests.sh  test01.f90  test02.f90  test03.f90
src/testdir/first/: run_tests.sh  test01.f90  test01.ms.comp  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp
src/testdir/graphics/: mkmkfile.sh  pde.f90  run_tests.sh  test01.f90  test02.f90  test03.f90  test04.f90  test05.f90
src/testdir/mkinc/: mkgraphics.inc  mkhead.inc  mkmain.inc  mkmkfile.inc  mkslave.inc  mktail.inc
src/testdir/pause/: run_tests.sh  test01.f90
src/testdir/test_arpack/: README  domain.neigh  pde.f90  run_tests.sh  test01.f90  test01.ms.comp  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp  test03.f90  test03.ms.comp  test03.seq.comp  test04.f90  test04.ms.comp  test04.seq.comp  test05.f90  test05.ms.comp  test05.seq.comp  test06.f90  test06.ms.comp  test06.seq.comp  test07.f90  test07.ms.comp  test07.seq.comp  test08.f90  test08.ms.comp  test08.seq.comp  test09.f90  test09.ms.comp  test09.seq.comp  test10.f90  test10.ms.comp  test10.seq.comp  test11.f90  test11.ms.comp  test11.seq.comp
src/testdir/test_blopexp/: README  run_tests.sh  test01.f90  test01.ms.comp  test02.f90  test02.ms.comp  test03.f90  test03.ms.comp  test04.f90  test04.ms.comp  test05.f90  test05.ms.comp  test06.f90  test06.ms.comp  test07.f90  test07.ms.comp  test08.f90  test08.ms.comp  test09.f90  test09.ms.comp  test10.f90  test10.ms.comp  test11.f90  test11.ms.comp
src/testdir/test_domain/: README  mkmkfile.sh  pde.f90  run_tests.sh  superior.1.node  test01.f90  test01.ms.comp  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp  test03.f90  test03.ms.comp  test03.seq.comp
src/testdir/test_hbmg/: README  run_tests.sh  test01.f90  test01.ms.comp  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp  test03.f90  test03.ms.comp  test03.seq.comp  test04.f90  test04.ms.comp  test04.seq.comp  test05.f90  test05.ms.comp  test05.seq.comp  test06.f90  test06.ms.comp  test06.seq.comp  test07.f90  test07.ms.comp  test07.seq.comp  test08.f90  test08.ms.comp  test08.seq.comp  test09.f90  test09.ms.comp  test09.seq.comp  test10.f90  test10.ms.comp  test10.seq.comp
src/testdir/test_hp/: README  pde.f90  run_tests.sh  test01.f90  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp  test03.f90  test03.ms.comp  test03.seq.comp  test04.f90  test04.ms.comp  test04.seq.comp  test05.f90  test05.ms.comp  test05.seq.comp  test06.f90  test06.ms.comp  test06.seq.comp  test07.f90  test07.ms.comp  test07.seq.comp  test08.f90  test08.ms.comp  test08.seq.comp  test09.f90  test09.ms.comp  test09.seq.comp  test10.f90  test10.ms.comp  test10.seq.comp  test11.f90  test11.ms.comp  test11.seq.comp  test12.f90  test12.ms.comp  test12.seq.comp  test13.f90  test13.ms.comp  (+4 more)
src/testdir/test_hypre/: README  run_tests.sh  test01.f90  test01.ms.comp  test02.f90  test02.ms.comp  test03.f90  test03.ms.comp  test04.f90  test04.ms.comp  test05.f90  test05.ms.comp  test06.f90  test06.ms.comp  test07.f90  test07.ms.comp
src/testdir/test_lapack/: README  pde.f90  run_tests.sh  test01.f90  test01.ms.comp  test01.seq.comp  test02.f90  test02.ms.comp  test02.seq.comp  test03.f90  test03.ms.comp  test03.seq.comp
src/testdir/test_loadbal/: README  (+16 more)
(+318 files in other folders)
